# thaitrarvel

./: .env.sample  .gitignore  pyproject.toml
scripts/: run-api
tests/: test_base.py  test_provinces.py  test_users.py
thaitravel/core/: deps.py
thaitravel/models/: __init__.py  default_setting_model.py  province_tax_model.py  user_model.py
thaitravel/routers/v1/: __init__.py  authentication_router.py  province_tax_router.py  user_router.py
thaitravel/schemas/: __init__.py  province_tax_schemas.py
