[project]
name = "thaitravel"
version = "0.1.0"
description = ""
authors = [
    {name = "krahyor",email = "gimgim611@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "fastapi-cli (>=0.0.8,<0.0.9)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
